turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:6: error: not found: value ==
        case i%2==0 => c=Color.red;
                ^DiskTwo:6: error: not found: value %
        case i%2==0 => c=Color.red;
              ^