turtleart.disktwo.DiskTwo.scala.code
override def run() {
    var c:Color=Color.black;
    for(i<-1 to 18){
      qcircle(c)
      i match{
        case i%2==0 => c=Color.red;
        case _ => c=Color.black;
      }
      
}
}
    def qcircle(c:Color){
    	setColor(c)
    	for(j<-1 to 90){
    		forward(100);
        penUp();
    		backward(100);
        penDown();
    		right(1);
      }
}